@@ -1,5 +1,8 @@
 [b]Version 0.8.4[/b]:
 
+(2013-03-15)
+ * Change the default value for file and stream cache to 2048.
+
 (2013-03-11)
  * Add the option "Pressing the stop button once resets the time position"
    in preferences -> interface -> seeking.
